--- a/ascii.css
+++ b/ascii.css
@@ -1,3 +1,13 @@
+/* Elise Saxon
+ * CS342: Web Scripting, WWU
+ * Due Nov. 17, 2017
+ * 
+ * ASCIImation website: A site formatted based on Homework #4 specifications.
+ * Practice with javascript concepts.
+ * This CSS file styles the elements on the site, per the specifications.
+ */
+
+
 body {
 	background-color: #CCCCFF;
 }
